feat(interpret): support modify action interpretation
